--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,15 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.cuneytayyildiz:onboarder:1.0.4'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'com.wdullaer:materialdatetimepicker:4.1.2'
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.github.shrikanth7698:Custom-Navigation-Drawer:v0.0.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.loicteillard:EasyTabs:0.4'
+    implementation 'com.github.badoualy:stepper-indicator:1.0.7'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
     testImplementation 'junit:junit:4.12'
