--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,6 +37,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.loicteillard:EasyTabs:0.4'
     implementation 'com.github.badoualy:stepper-indicator:1.0.7'
+    implementation 'com.daasuu:CountAnimationTextView:0.1.2'
+    implementation 'com.github.dimorinny:floating-text-button:0.0.4'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.heinrichreimersoftware:material-intro:1.6.2'
     testImplementation 'junit:junit:4.12'
